--- a/src/client/index.html
+++ b/src/client/index.html
@@ -7,11 +7,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
         <script src="/socket.io/socket.io.js"></script>
-        <script src="/phaser-ce/build/phaser.min.js" />
+        <script src="/phaser-ce/build/phaser.min.js"></script>
         <script src="/client.js"></script>
     </head>
 
     <body>
-        <h1>Welcome</h1>
     </body>
 </html>
